cambio de nombre

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!--menu de navegacion-->
   <header id="header">
     <div class="logo-header">
-      <a href="jamy.html"><img loading="lazy" src="imagenes/chick-origami-paper-svgrepo-com.svg" alt="" class="logo-menu"></a>
+      <a href="index.html"><img loading="lazy" src="imagenes/chick-origami-paper-svgrepo-com.svg" alt="" class="logo-menu"></a>
     </div>
 
     <div class="nav-menu">
@@ -29,7 +29,7 @@
       </label>
 
       <ul>
-        <li><a href="jamy.html">JAMY</a></li>
+        <li><a href="index.html">JAMY</a></li>
         <li><a href="jamy-places.html">Lugares</a></li>
         <li><a href="jamy-contact.html">Contacto</a></li>
       </ul>
