cambio link de github

--- a/jamy-places.html
+++ b/jamy-places.html
@@ -561,7 +561,7 @@
 
   <!--pie de pagina-->
   <footer class="pie-de-pagina">
-    <div> <a href="https://github.com/MINOTAURO18/primer-pagina" target="_blank"><img src="imagenes/github_media_social_video_icon_123259.svg" alt="github" ></a></div>
+    <div> <a href="https://github.com/MINOTAURO18/jamy" target="_blank"><img src="imagenes/github_media_social_video_icon_123259.svg" alt="github" ></a></div>
 
 
     <div><a href="https://www.instagram.com/alexander_munozy/" target="_blank"><img src="imagenes/instagram_internet_media_network_social_icon_123258.svg" alt="instagran"></a></div>
