--- a/jamy-places.html
+++ b/jamy-places.html
@@ -129,8 +129,7 @@
     <div class="container">
       <div class="card">
         <img loading="lazy" src="imagenes/alex-bicicleta.jpg" alt="">
-        <p>“Una bicicleta de montaña es como tu amigo. Una bicicleta de carretera es como tu amante.”
-          <cite>Sean Coffey</cite></p>
+        <p>“Una bicicleta de montaña es como tu amigo. Una bicicleta de carretera es como tu amante.”</p>
        
 
         <div class="redes"><a href="https://www.instagram.com/alexander_munozy/" target="_blank"><img src="imagenes/instagram_internet_media_network_social_icon_123258.svg" alt="instagran" class="redes"></a></div>
