--- a/jamy-places.html
+++ b/jamy-places.html
@@ -144,8 +144,7 @@
     <div class="container">
       <div class="card">
         <img loading="lazy" src="imagenes/planta-agua.jpg" alt="">
-        <p>“Montar en bicicleta es la mejor droga antidepresiva y solo tiene buenos efectos secundarios.”
-          <cite>Gunnar Rempel</cite></p>
+        <p>“Montar en bicicleta es la mejor droga antidepresiva y solo tiene buenos efectos secundarios.”</p>
         
 
         <div class="redes"><a href="https://www.instagram.com/alexander_munozy/" target="_blank"><img src="imagenes/instagram_internet_media_network_social_icon_123258.svg" alt="instagran" class="redes"></a></div>
@@ -160,7 +159,7 @@
       <div class="card">
         <img loading="lazy" src="imagenes/nice-house.jpg" alt="">
         <p> “Uno de los días más importantes de mi vida fue cuando aprendí a andar en bicicleta.”
-          <cite>Michael Palin</cite></p>
+          <cite></cite></p>
         
 
         <div class="redes"><a href="https://www.instagram.com/alexander_munozy/" target="_blank"><img src="imagenes/instagram_internet_media_network_social_icon_123258.svg" alt="instagran" class="redes"></a></div>
