--- a/jamy-places.html
+++ b/jamy-places.html
@@ -290,7 +290,7 @@
     <div class="container">
       <div class="card">
         <img loading="lazy" src="imagenes/cendero.jpg" alt="">
-        <p>“La vida es como montar en bicicleta. Para mantener el equilibrio, debes seguir moviéndote“.</p>
+        <p>“Lo unico que necesitas es un paseo en bicicleta “.</p>
        
 
         <div class="redes"><a href="https://www.instagram.com/alexander_munozy/" target="_blank"><img src="imagenes/instagram_internet_media_network_social_icon_123258.svg" alt="instagran" class="redes"></a></div>
