--- a/jamy-places.html
+++ b/jamy-places.html
@@ -403,7 +403,7 @@
     <div class="container">
       <div class="card">
         <img loading="lazy" src="imagenes/tres-caminos.jpg" alt="">
-        <p>“No importa si está lloviendo. Cuando voy en bicicleta soy el hombre más afortunado del mundo“.
+        <p>“Cuando voy en bicicleta soy el hombre más afortunado del mundo“.
        
 
         <div class="redes"><a href="https://www.instagram.com/alexander_munozy/" target="_blank"><img src="imagenes/instagram_internet_media_network_social_icon_123258.svg" alt="instagran" class="redes"></a></div>
