--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head> 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#10427">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>💠JAMY💠</title>
+  <title>JAMY</title>
   
   <link rel="shortcut icon" href="imagenes/chick-origami-paper-svgrepo-com.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,9 +46,9 @@
   <!--seccion dos-->
   <section class="section-two" id="sobre-mi">
     <article>
-      <h2>💠Sobre Mi💠</h2>
-      <p>¡hola! 💠 soy un programador en proceso 💠 mi nombre es john alexander muñoz yepez, el creador de esta página.💠
-        soy estudiante de ingeniería de la Universidad De Antioquia,💠en este momento (2022) tengo 18 años, soy una persona apasionada por la programación y los deportes.💠 me gustan los deportes de fuerza y de contacto,💠pero una de mis grandes pasiones es el ciclismo💠de este último se basa principalmente esta página,💠que muestra la cantidad de lugares  maravillosos que se pueden visitar a dos ruedas.💠
+      <h2>Sobre Mi</h2>
+      <p>¡hola! soy un programador en proceso mi nombre es john alexander muñoz yepez, el creador de esta página.
+        soy estudiante de ingeniería de la Universidad De Antioquia, en este momento (2022) tengo 18 años, soy una persona apasionada por la programación y los deportes. me gustan los deportes de fuerza y de contacto, pero una de mis grandes pasiones es el ciclismo de este último se basa principalmente esta página, que muestra la cantidad de lugares  maravillosos que se pueden visitar a dos ruedas.
       </p>
     </article>
 
@@ -65,8 +65,8 @@
   <!--seccion tres-->
   <section class="section-three" id="tres">
     <article id="jamy">
-      <h2>💠JAMY💠</h2>
-      <p>💠JAMY es solo la abreviación de mi nombre (john alexander muñoz yepez)💠</p>
+      <h2>JAMY</h2>
+      <p>JAMY es solo la abreviación de mi nombre (john alexander muñoz yepez)</p>
     </article> 
     <div class="origami">
       <div><img loading="lazy" src="imagenes/horse-origami-paper-svgrepo-com.svg" alt="horse"></div>
