--- a/jamy-contact.html
+++ b/jamy-contact.html
@@ -7,7 +7,7 @@
   
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💠Dime Hola💠</title>
+    <title>Dime Hola</title>
     <link rel="shortcut icon" href="imagenes/chick-origami-paper-svgrepo-com.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
       </form>
 
       <div class="bye">
-        <p>💠gracias por visitar mi primera página web,💠no es mucho, es código de un novato. pero fue creada con mucha dedicación y cariño💠gracias por verme.💠</p>
+        <p>gracias por visitar mi primera página web, no es mucho, es código de un novato. pero fue creada con mucha dedicación y cariño gracias por verme.</p>
       </div>
 
        <!--boton de siguiente-->
