cambio de color

--- a/jamy-places.html
+++ b/jamy-places.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <!--menu de navegacion-->
+  <!--menu de navegacion--> 
   <header id="header">
    <div class="logo-header">
       <a href="index.html"><img loading="lazy" src="imagenes/chick-origami-paper-svgrepo-com.svg" alt="" class="logo-menu"></a>
@@ -39,7 +39,7 @@
   <!--seccion uno-->
   <section class="section-one">
     <div class="img-principal">
-      <img src="imagenes/logo.jog" alt="logo-eslogan">
+      <img src="imagenes/ayer era tarde.png" alt="logo-eslogan">
     </div>
   </section>
   <hr>
