--- a/index-white.html
+++ b/index-white.html
@@ -11,14 +11,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@600&family=Oswald:wght@500&family=Raleway:ital,wght@0,500;1,400&family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@0,400;0,700;1,400&family=Titillium+Web:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="jamy.css">
+  <link rel="stylesheet" href="jamy-white.css">
 </head>
 <body>
   
   <!--menu de navegacion--> 
   <header id="header">
     <div class="logo-header">
-      <a href="index.html"><img loading="lazy" src="imagenes/chick-origami-paper-svgrepo-com.svg" alt="" class="logo-menu"></a>
+      <a href="index-white.html"><img loading="lazy" src="imagenes/chick-origami-paper-svgrepo-com.svg" alt="" class="logo-menu"></a>
     </div>
 
     <div class="nav-menu">
@@ -29,10 +29,10 @@
       </label>
 
       <ul>
-        <li><a href="index.html">JAMY</a></li>
-        <li><a href="jamy-places.html">Lugares</a></li>
-        <li><a href="jamy-contact.html">Contacto</a></li>
-        <li><a href="index-white.html"><img loading="lazy" src="imagenes/sun-svgrepo-com.svg" alt="" class="sun"></a></li>
+        <li><a href="index-white.html">JAMY</a></li>
+        <li><a href="jamy-places-white.html">Lugares</a></li>
+        <li><a href="jamy-contact-white.html">Contacto</a></li>
+        <li><a href="index.html"><img loading="lazy" src="imagenes/moon-svgrepo-com.svg" alt="" class="moon"></a></li>
 
       </ul>
     </div>
@@ -79,7 +79,7 @@
 
   <!--boton de siguiente-->
   <section class="next">
-    <a href="jamy-places.html">
+    <a href="jamy-places-white.html">
       <img loading="lazy" src="imagenes/next-svgrepo-com.svg" alt="next" class="next-logo">
     </a>
   </section>
