--- a/jamy-contact-white.html
+++ b/jamy-contact-white.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@600&family=Oswald:wght@500&family=Raleway:ital,wght@0,500;1,400&family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@0,400;0,700;1,400&family=Titillium+Web:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="jamy-contact.css">
+    <link rel="stylesheet" href="jamy-contact-white.css">
 </head>
 <body>
 
@@ -35,7 +35,7 @@
 
        <!--boton de siguiente-->
   <section class="next">
-    <a href="index.html">
+    <a href="index-white.html">
       <img loading="lazy" src="imagenes/back-svgrepo-com2.svg" alt="next" class="next-logo">
     </a>
   </section>
