--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <section class="section-two" id="sobre-mi">
     <article>
       <h2>Sobre Mi</h2>
-      <p>¡hola! soy un programador mi nombre es john alexander muñoz yepez, el creador de esta página.
-        soy estudiante de la Universidad De Antioquia, en este momento (2022) tengo 18 años, soy una persona apasionada por la programación y los deportes. me gustan los deportes de fuerza y de contacto, pero una de mis grandes pasiones es el ciclismo de este último se basa principalmente esta página, que muestra la cantidad de lugares  maravillosos que se pueden visitar a dos ruedas.
+      <p>¡hola! soy un programador, mi nombre es John Alexander Muñoz Yepez, el creador de esta página.
+        soy estudiante de la Universidad De Antioquia, soy una persona apasionada por la programación y los deportes. me gustan los deportes de fuerza y de contacto, pero una de mis grandes pasiones es el ciclismo de este último se basa principalmente esta página, que muestra la cantidad de lugares  maravillosos que se pueden visitar a dos ruedas.
       </p>
     </article> 
 
@@ -68,7 +68,7 @@
   <section class="section-three" id="tres">
     <article id="jamy">
       <h2>JAMY</h2>
-      <p>JAMY es solo la abreviación de mi nombre (john alexander muñoz yepez)</p>
+      <p>JAMY es solo la abreviación de mi nombre (John Alexander Muñoz Yepez)</p>
     </article> 
     <div class="origami">
       <div><img loading="lazy" src="imagenes/horse-origami-paper-svgrepo-com.svg" alt="horse"></div>
