--- a/jamy-contact-white.html
+++ b/jamy-contact-white.html
@@ -22,7 +22,7 @@
       <!--formulario-->
       <form class="form" action="https://formspree.io/f/mdojkpgw"
       method="POST">
-        <label class="label">Dime Hola</label>
+        <label class="label" style="color: #000;">Dime Hola</label>
         <input type="text" placeholder="Nombre" name="name" required autofocus autocomplete="off">
         <input type="email" placeholder="Email"  name="email" required autocomplete="off">
         <textarea required placeholder="Mensaje" name="message"></textarea>
