--- a/jamy-contact.html
+++ b/jamy-contact.html
@@ -20,7 +20,7 @@
     
 
       <!--formulario-->
-      <form class="form" action="https://formspree.io/f/mdojkpgw"
+      <form class="form" target="_blank" action="https://formspree.io/f/mdojkpgw"
       method="POST">
         <label class="label" style="color: #fff;">Dime Hola</label>
         <input type="text" placeholder="Nombre" name="name" required autofocus autocomplete="off">
