--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="imagenes/chick-origami-paper-svgrepo-com.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@600&family=Oswald:wght@500&family=Raleway:ital,wght@0,500;1,400&family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@0,400;0,700;1,400&family=Titillium+Web:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Covered+By+Your+Grace&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="jamy.css">
 </head>
 <body>
