--- a/index-white.html
+++ b/index-white.html
@@ -50,7 +50,7 @@
     <article>
       <h2>Sobre Mi</h2>
       <p>¡hola! soy un programador en proceso mi nombre es john alexander muñoz yepez, el creador de esta página.
-        soy estudiante de ingeniería de la Universidad De Antioquia, en este momento (2022) tengo 18 años, soy una persona apasionada por la programación y los deportes. me gustan los deportes de fuerza y de contacto, pero una de mis grandes pasiones es el ciclismo de este último se basa principalmente esta página, que muestra la cantidad de lugares  maravillosos que se pueden visitar a dos ruedas.
+        soy estudiante de ingeniería de la Universidad De Antioquia. soy una persona apasionada por la programación y los deportes. me gustan los deportes de fuerza y de contacto, pero una de mis grandes pasiones es el ciclismo de este último se basa principalmente esta página, que muestra la cantidad de lugares  maravillosos que se pueden visitar a dos ruedas.
       </p>
     </article> 
 
