--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <article>
       <h2>Sobre Mi</h2>
       <p>¡hola! soy un programador, mi nombre es John Alexander Muñoz Yepez, el creador de esta página.
-        soy estudiante de la Universidad De Antioquia, soy una persona apasionada por la programación y los deportes. me gustan los deportes de fuerza y de contacto, pero una de mis grandes pasiones es el ciclismo de este último se basa principalmente esta página, que muestra la cantidad de lugares  maravillosos que se pueden visitar a dos ruedas.
+        soy estudiante de la Universidad De Antioquia. soy una persona apasionada por la programación y los deportes. me gustan los deportes de fuerza y de contacto, pero una de mis grandes pasiones es el ciclismo de este último se basa principalmente esta página, que muestra la cantidad de lugares  maravillosos que se pueden visitar a dos ruedas.
       </p>
     </article> 
 
